# coinflip

./: Cargo.toml  README.md  package-lock.json  package.json
src/: flip.rs  lib.rs
test/: flip.ts  test_flip.ts
tests/: flip_test.rs
