[package]
name = "coinflip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.11.0"
solana-program = "1.16.0"
solana-program-test = "1.16.0"
solana-sdk = "1.16.0"
getrandom = { version = "0.2.9", features=["custom"]}